# climatestateclassifier

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
climatestateclassifier/: __init__.py  config.py  evaluate.py  test.py  train.py
climatestateclassifier/loss/: get_loss.py  location_loss.py  oni_loss.py
climatestateclassifier/lrp/: conv.py  converter.py  linear.py  lstm.py  maxpool.py  patterns.py  sequential.py  trace.py
climatestateclassifier/lrp/functional/: conv.py  linear.py  lstm.py  maxpool.py
climatestateclassifier/model/: decoder.py  encoder.py  net.py
climatestateclassifier/utils/: evaluation.py  explain_location_net.py  explain_net.py  io.py  netcdfloader.py  normalizer.py  plot_location.py  plot_oni.py  plot_utils.py  visualization.py
demo/: README.md  demo_evaluate.txt  demo_train.txt
demo/data/: 19921tsurfne.nc  19921tsurfnh.nc  19921tsurfsh.nc  19921tsurftr.nc
